--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,12 @@
       <version>5.5.0</version>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>json-path</artifactId>
       <version>5.5.0</version>
     </dependency>
-
-     
 
     <dependency>
       <groupId>io.rest-assured</groupId>
@@ -39,12 +37,12 @@
       <version>7.10.2</version>
       <scope>test</scope>
     </dependency>
-           <dependency>
-    <groupId>ch.qos.logback</groupId>
-    <artifactId>logback-classic</artifactId>
-    <version>1.4.14</version>
-</dependency>
 
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.4.14</version>
+    </dependency>
 
     <!-- Jackson -->
     <dependency>
@@ -118,32 +116,40 @@
 
   <build>
     <plugins>
-     <plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-compiler-plugin</artifactId>
-  <version>3.11.0</version>
-  <configuration>
-    <source>17</source>
-    <target>17</target>
-    <fork>true</fork>
-    <compilerArgs>
-      <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-      <arg>--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-    </compilerArgs>
-  </configuration>
-</plugin>
-             <plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-surefire-plugin</artifactId>
-  <version>3.0.0-M5</version>
-  <configuration>
-    <includes>
-      <include>**/TestRunner.java</include>
-    </includes>
-  </configuration>
-</plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+          <fork>true</fork>
+          <compilerArgs>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
 
-
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <includes>
+            <include>**/TestRunner.java</include>
+          </includes>
+        </configuration>
+      </plugin>
     </plugins>
+
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <includes>
+          <include>**/*.feature</include>
+        </includes>
+      </testResource>
+    </testResources>
   </build>
 </project>
