--- a/.github/workflows/run-cucumber-tests.yml
+++ b/.github/workflows/run-cucumber-tests.yml
@@ -1,49 +1,3 @@
-# name: Run Cucumber Tests
-
-# on:
-#   push:
-#     branches: [ master]
-#   pull_request:
-#     branches: [ master ]
-
-# jobs:
-#   test:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: 📥 Checkout code
-#         uses: actions/checkout@v3
-
-#       - name: ☕ Set up JDK 17
-#         uses: actions/setup-java@v3
-#         with:
-#           distribution: 'temurin'
-#           java-version: '17'
-
-#       - name: 🛠️ Set up Maven
-#         run: mvn -v  # Just to verify Maven is installed
-
-#       - name: 🔨 Build and Compile
-#         run: mvn clean compile
-
-#       - name: 🚀 Run Cucumber Tests
-#         run: mvn test
-
-#       - name: 🧪 List test output
-#         run: ls -R target
-
-#       - name: 📦 Upload Cucumber HTML Report
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: cucumber-html-report
-#           path: target/cucumber-reports.html
-
-#       - name: 📦 Upload Cucumber JSON Report
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: cucumber-json-report
-#           path: target/cucumber-reports.json
-
 name: Run Cucumber Tests
 
 on:
@@ -55,57 +9,58 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: 📥 Checkout code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: ☕ Set up JDK 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: 🛠️ Set up Maven
-        run: mvn -v # Just to verify Maven is installed
+      - name: Verify Maven Installation
+        run: mvn -v
 
-      - name: 🔍 Find duplicate TestRunner files
+      - name: Find TestRunner files
         run: |
           echo "Searching for TestRunner.java files..."
           find . -name "TestRunner.java" -type f
           echo "Listing content of TestRunner files:"
           find . -name "TestRunner.java" -type f | xargs -I {} sh -c 'echo "\n=== Content of {} ==="; cat {}'
 
-      - name: 🧹 Clean project
+      - name: Clean the project
         run: mvn clean
 
-      - name: 🔨 Compile only
-        run: mvn compile
-
-      - name: 🔨 Compile tests with debug
+      - name: Compile tests
         run: mvn test-compile -X
 
-      - name: 🚀 Run Cucumber Tests
-        run: mvn test
-        continue-on-error: true  # Continue even if tests fail to collect reports
+      - name: List Feature Files
+        run: find src/test/resources -name "*.feature"
 
-      - name: 🧪 List test output
+      - name: Run Cucumber Tests
+        run: mvn verify
+        continue-on-error: true
+
+      - name: List test output
         run: ls -R target
 
-      - name: 📦 Upload Cucumber HTML Report
+      - name: Upload Cucumber HTML Report
         uses: actions/upload-artifact@v4
         with:
           name: cucumber-html-report
           path: target/cucumber-reports/cucumber-html-reports/**
           if-no-files-found: warn
 
-      - name: 📦 Upload Cucumber JSON Report
+      - name: Upload Cucumber JSON Report
         uses: actions/upload-artifact@v4
         with:
           name: cucumber-json-report
           path: target/cucumber-reports/cucumber.json
           if-no-files-found: warn
 
-      - name: 📋 Upload Maven logs
+      - name: Upload Maven logs
         uses: actions/upload-artifact@v4
         with:
           name: maven-logs
