--- a/pom.xml
+++ b/pom.xml
@@ -132,15 +132,16 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
-        <configuration>
-          <includes>
-            <include>**/TestRunner.java</include>
-          </includes>
-        </configuration>
-      </plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.0.0-M5</version>
+      <configuration>
+        <includes>
+          <include>**/TestRunner.java</include>
+        </includes>
+        <testFailureIgnore>true</testFailureIgnore>
+      </configuration>
+    </plugin>
     </plugins>
 
     <testResources>
