--- a/.github/workflows/run-cucumber-tests.yml
+++ b/.github/workflows/run-cucumber-tests.yml
@@ -1,70 +1,33 @@
-name: Run Cucumber Tests
-
+name: Java CI with Maven
+ 
 on:
   push:
-    branches: [ master ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ master ]
-
+    branches: [ "master" ]
+ 
 jobs:
-  test:
+  build:
+ 
     runs-on: ubuntu-latest
-
+ 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Verify Maven Installation
-        run: mvn -v
-
-      - name: Find TestRunner files
-        run: |
-          echo "Searching for TestRunner.java files..."
-          find . -name "TestRunner.java" -type f
-          echo "Listing content of TestRunner files:"
-          find . -name "TestRunner.java" -type f | xargs -I {} sh -c 'echo "\n=== Content of {} ==="; cat {}'
-
-      - name: Clean the project
-        run: mvn clean
-
-      - name: Compile tests
-        run: mvn test-compile -X
-
-      - name: List Feature Files
-        run: find src/test/resources -name "*.feature"
-
-      - name: Run Cucumber Tests
-        run: mvn verify
-        continue-on-error: true
-
-      - name: List test output
-        run: ls -R target
-
-      - name: Upload Cucumber HTML Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: cucumber-html-report
-          path: target/cucumber-reports/cucumber-html-reports/**
-          if-no-files-found: warn
-
-      - name: Upload Cucumber JSON Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: cucumber-json-report
-          path: target/cucumber-reports/cucumber.json
-          if-no-files-found: warn
-
-      - name: Upload Maven logs
-        uses: actions/upload-artifact@v4
-        with:
-          name: maven-logs
-          path: |
-            target/surefire-reports/**
-            ./**/TestRunner.java
-          if-no-files-found: warn
+    - name: Checkout repository
+      uses: actions/checkout@v3
+ 
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+ 
+    - name: Cache Maven packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+ 
+    - name: Build and run tests
+      run: mvn clean test
